2004-07-12  Roberto Bucher <roberto.bucher@supsi.ch>

	* rtai-lab/scilab/*: Directory files modified for Scilab-3.0

2004-07-12  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/arch/i386/patches: Upgrade the x86 patch to
	2.6.7r6c2.

2004-07-07  Wolfgang Grandegger  <wolfgang.grandegger@bluewin.ch>

	* rtai-core: A first version of RTAI over ADEOS on PowerPC
	has been added. The legacy RTAI (RTHAL) is still available.

2004-07-07  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/scripts/rtai-load.in: Use "ls" instead of "file" to
	work around busybox's shortcomings.

2004-07-05  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/arch/i386/Kconfig: Make RTAI_MATH depend on
	RTAI_FPU_SUPPORT.

	* configure.in: Kludge:: Allow for configuration of 8254 and PIC
	latency figures in non-x86 mode, since we need them for non-UP
	scheds.

2004-07-01  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/malloc/malloc.c (rtheap_destroy): Kludge:: make sure
	the global heap memory is properly released.

2004-06-30  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/sched_rtai/sched_lxrt.c (lxrt_intercept_syscall): Fix
	the domain migration handler (do not reset the RT_TASK state to
	2).

2004-06-28  Paolo Mantegazza  <mantegazza@aero.polimi.it>

        * rtai-core/ipc/mbx/mbx.c: all inlines eliminated, module size
        reduced to less than half, performances not worsened (likely the
        opposite).

2004-06-28  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/arch/i386/patches: Upgrade the x86 patch to
	2.6.7r6c1. Discard older r5 patches since critical fixes are
	brought by this one, Linux-wise and Adeos-wise.

	* rtai-core/arch/i386/hal/hal.c (rtai_trap_fault): Handle
	RTAI-originated faults in kernel space caused by on-demand virtual
	memory mappings.

	* configure.in, rtai-core/arch/*/Kconfig: Make the global heap
	size a configurable parameter.

2004-06-28  Paolo Mantegazza  <mantegazza@aero.polimi.it>

	* rtai-core/malloc/malloc.c: renamed global heap variable and added